--- a/mall/cart/cart-dev.yml
+++ b/mall/cart/cart-dev.yml
@@ -4,7 +4,7 @@ server:
     context-path: /cart-server
 spring:
   application:
-    name: cart-server123
+    name: cart-server
   zipkin:
     base-url: http://localhost:9411/
   sleuth:
