--- a/mall/cart/cart-dev.yml
+++ b/mall/cart/cart-dev.yml
@@ -28,6 +28,16 @@ logging:
   level: com.codingapi=debug
 
 
+swagger:
+  basePackage: com.humor.user.controller
+  title: 微服务、分布式实践
+  description: 笑而不语，痛而不言
+  contact:
+    name: humor
+    email: guxingying@live.cn
+    url: http://localhost:8089
+
+
 
 
 
