--- a/mall/common/common-dev.yml
+++ b/mall/common/common-dev.yml
@@ -19,3 +19,12 @@ mail:
     addr: 943456477@qq.com
 
 
+swagger:
+  basePackage: com.humor.user.controller
+  title: 微服务、分布式实践
+  description: 笑而不语，痛而不言
+  contact:
+    name: humor
+    email: guxingying@live.cn
+    url: http://localhost:8089
+
