--- a/mall/user/user-dev.yml
+++ b/mall/user/user-dev.yml
@@ -21,6 +21,15 @@ spring:
     restart:
       enabled: true
       exclude: static/*
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
+  endpoint:
+    health:
+      show-details: always
+
 
 eureka:
   instance:
